2010-09-04  Thomas E. Dickey  <dickey@invisible-island.net>

	* package/tack.spec, package/debian/rules, package/debian/docs, package/debian/copyright, package/debian/control, package/debian/watch, package/debian/changelog, package/debian/source/format:
	RCS_BASE

	* tack.c, tack.h: add patch-date to version message

2010-09-03  Thomas E. Dickey  <dickey@invisible-island.net>

	* AUTHORS: RCS_BASE

	* sysdep.c, sync.c, init.c, fun.c, output.c, scan.c, control.c:
	gcc-warnings

	* fun.c: indent

	* Makefile.in: add dummy for "make check".

	* tack.h, tack.c, sysdep.c, sync.c, scan.c: indent

	* pad.c: copyright-date

	* pad.c, output.c: indent

	* modes.c: copyright-date

	* modes.c: indent

	* menu.c: copyright-date

	* menu.c, init.c, fun.c, edit.c, crum.c, control.c, color.c, charset.c, ansi.c:
	indent

2010-04-20  Thomas E. Dickey  <dickey@invisible-island.net>

	* package/debian/compat: RCS_BASE

2009-12-26  Thomas E. Dickey  <dickey@invisible-island.net>

	* configure:
	regen to get new macros, as well as to use autoconf-252 (patched)

	* aclocal.m4: resync with my-autoconf (many changes)

	* Makefile.in: drop mkdirs.sh, just use mkdir -p

	* control.c, tack.c, sysdep.c, sync.c: strict gcc warnings

	* init.c: check if baudrate() returns ERR, use 1 if so.

	* fun.c, edit.c, pad.c, scan.c, charset.c: strict gcc warnings

	* tack.h: bump to 1.07

	* HISTORY: reason for release

	* ansi.c, output.c, menu.c: strict gcc warnings

	* edit.c:
	fix an incorrect malloc-size in show_report(), which could cause core-dump
	when displaying long list of function-keys, e.g., for xterm-new

2009-11-19  Thomas E. Dickey  <dickey@invisible-island.net>

	* config.guess, config.sub: update to 2009-11-20

2007-08-12  Thomas E. Dickey  <dickey@invisible-island.net>

	* edit.c:
	as of 2007/8/12, ncurses no longer exports the data _nc_info_hash_table.
	Instead, use the function _nc_get_hash_table(), which is in ncurses 5.0

2007-08-11  Thomas E. Dickey  <dickey@invisible-island.net>
