@@ -1,3 +1,7 @@
+2011-02-02  Thomas E. Dickey  <dickey@invisible-island.net>
+
+	* config.guess: update to 2011-01-01
+
 2010-09-04  Thomas E. Dickey  <dickey@invisible-island.net>
 
 	* package/tack.spec, package/debian/rules, package/debian/docs, package/debian/copyright, package/debian/control, package/debian/watch, package/debian/changelog, package/debian/source/format:
